<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="535dp"
        android:layout_height="862dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/en" />

    <EditText
        android:id="@+id/editTxt2ndVar"
        android:layout_width="352dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="number"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="@+id/editTxt1stVar"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/editTxt1stVar"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:backgroundTint="#e9dcc3"
        android:text="@string/top2"
        android:textColor="#2d533c"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTxt1stVar"
        app:layout_constraintStart_toStartOf="@+id/editTxt1stVar"
        app:layout_constraintTop_toBottomOf="@+id/editTxt1stVar" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="77dp"
        android:layout_height="81dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#744343"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/btnSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt1stVar" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="77dp"
        android:layout_height="81dp"
        android:backgroundTint="#744343"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="77dp"
        android:layout_height="81dp"
        android:backgroundTint="#744343"
        android:text="@string/multiply"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSubtract"
        app:layout_constraintTop_toTopOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="77dp"
        android:layout_height="81dp"
        android:backgroundTint="#744343"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toTopOf="@+id/btnMultiply" />


    <EditText
        android:id="@+id/editTxt1stVar"
        android:layout_width="352dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="number"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" /><![CDATA[

    "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    ]]>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/top1"
        android:textColor="#2d533c"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/bottom1"
        android:textColor="#dfd2b3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/answerTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/answerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/bottom2"
        android:textColor="#dfd2b3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnModulo"
        android:layout_width="117dp"
        android:layout_height="64dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="#744343"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt2ndVar" />

</androidx.constraintlayout.widget.ConstraintLayout>

